plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.github.ben-manes.versions' version '0.52.0'
	id 'org.ec4j.editorconfig' version '0.1.0'
	id 'com.diffplug.eclipse.apt' version '4.3.0'
}

group = 'com.glinboy'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	jsr310Version = '2.19.0'
	springdocVersion = '2.8.6'
	mapstructVersion = '1.6.3'
	jjwtVersion = '0.12.6'
}

defaultTasks "bootRun"

dependencies {
	implementation 'org.springframework.boot:spring-boot-h2console'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
	implementation "org.springdoc:springdoc-openapi-starter-common:${springdocVersion}"
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
}

bootRun {
	jvmArgs = [
			'-XX:+UseZGC',
			'-Xlog:gc*:file=log/jcart.gc.log',
			'-XX:+HeapDumpOnOutOfMemoryError',
			'-XX:HeapDumpPath=log/crashes/jcart.hprof',
			'-Xss256k',
			'-Dsun.net.client.defaultConnectTimeout=2000',
			'-Dsun.net.client.defaultReadTimeout=2000'
	]
}

tasks.named('test') {
	useJUnitPlatform()
}
